# bsparse

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: index.doctree
.doctrees/api/: bsparse.doctree  bsparse.routines.doctree  index.doctree  sparse.doctree  sparse.routines.doctree
.doctrees/user/: basics.bsparse.doctree  basics.doctree  basics.indexing.doctree  basics.instantiation.doctree  basics.io.doctree  basics.sparse.doctree  index.doctree  installation.doctree  whatisbsparse.doctree
.github/workflows/: doc.yml  test.yml
_sources/: index.rst.txt
_sources/api/: index.rst.txt  sparse.rst.txt
_sources/user/: basics.bsparse.rst.txt
api/: bsparse.html  bsparse.routines.html  index.html  sparse.html  sparse.routines.html
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/_static/: bsparse.css
doc/source/_templates/: member.rst
doc/source/_templates/autosummary/: attribute.rst  base.rst  method.rst
doc/source/api/: bsparse.routines.rst  bsparse.rst  index.rst  sparse.routines.rst
doc/source/guide/: index.rst
doc/source/user/: basics.indexing.rst  basics.instantiation.rst  basics.io.rst  basics.rst  basics.sparse.rst  index.rst  installation.rst  whatisbsparse.rst
src/_bsparse/: bsparse.cpp
src/_sparse/: sparse.cpp
src/_utils/: utils.cpp
src/bsparse/: __init__.py  _base.py  bcoo.py  bcsr.py  bdia.py  broutines.py  bsparse.py
src/bsparse/sparse/: __init__.py  _base.py  coo.py  csr.py  dia.py  routines.py  sparse.py
tests/bsparse/: test_access.py  test_arithmetic.py  test_conversion.py  test_creation.py
tests/sparse/: test_access.py  test_arithmetic.py  test_conversion.py  test_creation.py
user/: basics.bsparse.html  basics.html  basics.indexing.html  basics.instantiation.html  basics.io.html  basics.sparse.html  index.html  installation.html  whatisbsparse.html
