cmake_minimum_required(VERSION 3.15...3.27)

project(bsparse LANGUAGES CXX)

if (NOT SKBUILD)
  message(WARNING "\
  This CMake file is meant to be executed using 'scikit-build'. Running
  it directly will almost certainly not produce the desired result. If
  you are a user trying to install this package, please use the command
  below, which will install all necessary build dependencies, compile
  the package in an isolated environment, and then install it.
  =====================================================================
   $ pip install .
  =====================================================================
  If you are a software developer, and this is your own package, then
  it is usually much more efficient to install the build dependencies
  in your environment once and use the following command that avoids
  a costly creation of a new virtual environment at every compilation:
  =====================================================================
   $ pip install nanobind scikit-build-core[pyproject]
   $ pip install --no-build-isolation -ve .
  =====================================================================
  You may optionally add -Ceditable.rebuild=true to auto-rebuild when
  the package is imported. Otherwise, you need to re-run the above
  after editing C++ files.")
endif()

find_package(Python 3.11 COMPONENTS Interpreter Development.Module REQUIRED)

find_package(nanobind CONFIG REQUIRED)

nanobind_add_module(
  _utils
  STABLE_ABI
  NB_STATIC
  src/_utils/utils.cpp
)

nanobind_add_module(
  _bsparse
  STABLE_ABI
  NB_STATIC
  src/_bsparse/bsparse.cpp
)

nanobind_add_module(
  _sparse
  STABLE_ABI
  NB_STATIC
  src/_sparse/sparse.cpp
)

install(TARGETS _utils LIBRARY DESTINATION bsparse)
install(TARGETS _bsparse LIBRARY DESTINATION bsparse)
install(TARGETS _sparse LIBRARY DESTINATION bsparse)
