[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"


[project]
name = "bsparse"
authors = [{ name = "Nicolas Vetsch", email = "vetschn@iis.ee.ethz.ch" }]
description = "Block sparse matrices for scientific computing."
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
keywords = ["Nano-TCAD", "Sparse Matrices", "Block Matrices"]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["numpy", "scipy>=1.11", "nanobind"]

[project.urls]
Code = "https://github.com/vetschn/bsparse"

[tool.isort]
profile = "black"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/bsparse/__about__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning:bsparse", "ignore::RuntimeWarning"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
